--- a/MemoD/app/src/main/res/layout/activity_post.xml
+++ b/MemoD/app/src/main/res/layout/activity_post.xml
@@ -52,8 +52,9 @@
                     android:layout_height="50dp"
                     android:layout_marginStart="20dp"
                     android:contentDescription="profile"
-                    android:src="@drawable/random_image"
+                    android:src="@drawable/personuser1"
                     app:srcCompat="@drawable/personuser1" />
+
 
                 <LinearLayout
                     android:layout_width="0dp"
@@ -95,12 +96,15 @@
                     android:layout_marginTop="16dp"
                     android:contentDescription="@drawable/image_map"
                     android:textAlignment="center"
+                    android:translationZ="0dp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.49"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
                     app:srcCompat="@drawable/image_map" />
+
             </androidx.constraintlayout.widget.ConstraintLayout>
+
 
             <LinearLayout
                 android:layout_width="match_parent"
