전반적인 페이지에 testData 조금 더 실제같도록 값채우기 완료, 하단 바 연결 안되었던거 연결

--- a/MemoD/app/src/main/res/layout/activity_home_group_list_component.xml
+++ b/MemoD/app/src/main/res/layout/activity_home_group_list_component.xml
@@ -6,6 +6,7 @@
     android:orientation="vertical">
 
     <LinearLayout
+        android:id="@+id/background"
         android:layout_width="150dp"
         android:layout_height="160dp"
         android:background="@drawable/group_creat_border"
@@ -22,6 +23,7 @@
             android:layout_width="142dp"
             android:layout_height="100dp"
             android:layout_gravity="center"
+            android:scaleType="centerCrop"
             android:src="@drawable/image"></ImageView>
 
         <TextView
