--- a/MemoD/app/src/main/res/layout/activity_groupmain.xml
+++ b/MemoD/app/src/main/res/layout/activity_groupmain.xml
@@ -53,40 +53,79 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
-            <ImageView
-                android:id="@+id/profile_image"
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="150dp"
-                android:paddingStart="40dp"
-                android:paddingTop="20dp"
-                android:paddingEnd="40dp"
-                app:srcCompat="@drawable/random_image" />
+                android:layout_height="match_parent"
+                android:orientation="vertical">
 
-            <TextView
-                android:id="@+id/group_name"
+                <ImageView
+                    android:id="@+id/profile_image"
+                    android:layout_width="150dp"
+                    android:layout_height="150dp"
+                    android:layout_gravity="center"
+                    android:enabled="true"
+                    android:paddingStart="40dp"
+                    android:paddingTop="20dp"
+                    android:paddingEnd="40dp"
+
+                    android:scaleType="centerCrop"
+                    android:textAlignment="center"
+
+                    android:visibility="visible"
+                    app:srcCompat="@drawable/random_image"
+                    tools:visibility="visible">
+
+
+                </ImageView>
+
+                <TextView
+                    android:id="@+id/group_name"
+                    android:layout_width="match_parent"
+                    android:layout_height="40dp"
+                    android:gravity="center|center_horizontal"
+                    android:text="group_name"
+                    android:textStyle="bold"
+                    android:textSize="30sp" />
+            </LinearLayout>
+
+            <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
-                android:layout_height="40dp"
-                android:gravity="center|center_horizontal"
-                android:text="group_name"
-                android:textSize="30sp" />
+                android:layout_height="match_parent"
+                android:layout_marginTop="30dp">
 
-            <TextView
-                android:id="@+id/map_text"
-                android:layout_width="wrap_content"
-                android:layout_height="30dp"
-                android:layout_marginStart="40dp"
-                android:layout_marginTop="40dp"
-                android:contentDescription="@string/app_name"
-                android:text="그룹 지도"
-                android:textSize="25sp" />
+                <TextView
+                    android:id="@+id/map_text"
+                    android:layout_width="wrap_content"
+                    android:layout_height="30dp"
+                    android:layout_marginStart="16dp"
+                    android:contentDescription="@string/app_name"
+                    android:text="그룹 지도"
+                    android:textSize="25sp"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
 
-            <ImageView
-                android:id="@+id/map"
-                android:layout_width="match_parent"
-                android:layout_height="500dp"
-                android:paddingStart="40dp"
-                android:paddingEnd="40dp"
-                app:srcCompat="@drawable/image_map" />
+                <ImageView
+                    android:id="@+id/map"
+                    android:layout_width="match_parent"
+                    android:layout_height="500dp"
+
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:srcCompat="@drawable/image_map" />
+
+                <ImageView
+                    android:id="@+id/pin"
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
+
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintHorizontal_bias="0.608"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintVertical_bias="0.391"
+                    app:srcCompat="@drawable/pin" />
+            </androidx.constraintlayout.widget.ConstraintLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -101,7 +140,9 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:src="@drawable/random_image"
+                    android:src="@drawable/ramen"
+                    android:scaleType="centerCrop"
+                    android:layout_marginRight="10dp"
                      />
 
                 <LinearLayout
@@ -116,14 +157,14 @@
                         android:layout_width="match_parent"
                         android:layout_height="0dp"
                         android:layout_weight="1"
-                        android:text="name" />
+                        android:text="라면 미식가" />
 
                     <TextView
                         android:id="@+id/self_intro"
                         android:layout_width="match_parent"
                         android:layout_height="0dp"
                         android:layout_weight="1"
-                        android:text="self_intro" />
+                        android:text="라면은 명지대학교 안라면" />
                 </LinearLayout>
 
             </LinearLayout>
