--- a/MemoD/app/src/main/res/layout/mypage_map.xml
+++ b/MemoD/app/src/main/res/layout/mypage_map.xml
@@ -34,7 +34,7 @@
             android:layout_height="80dp"
             android:layout_gravity="center"
             android:layout_margin="10dp"
-            android:src="@mipmap/ic_launcher" />
+            android:src="@drawable/cat" />
 
         <TextView
             android:id="@+id/mypage_name"
